# manifest

./: .gitignore  CLAUDE.md  README.md  migrate-from-oap.sh  oap-salearn-apache.conf  oap-salearn.py  oap-salearn.service  setup.sh
agent/: config.yaml.example  pyproject.toml
agent/frontend/: index.html  tsconfig.tsbuildinfo  vite.config.ts
agent/oap_agent/: api.py  config.py  db.py  executor.py  memory.py  scheduler.py  transcribe.py
discovery/: config.yaml.example  credentials.example.yaml
discovery/manifests/: kagi-search.json  oap-email.json  oap-reminder.json  open-library.json  serp-shopping.json  spotify-add-tracks.json  spotify-create-playlist.json  spotify-daily-mix.json  spotify-playlists.json  spotify-recently-played.json  spotify-related-artists.json  spotify-search.json  spotify-top-artists.json  spotify-top-tracks-filtered.json  spotify-top-tracks.json  spotify-upsert-playlist.json  tavily-search.json
discovery/manifests_disabled/: kagi-search.json
discovery/oap_discovery/: api.py  cloud_tool_bridge.py  config.py  db.py  experience_api.py  experience_store.py  fts_store.py  models.py  tool_api.py  tool_executor.py  tool_models.py
docs/: AGENT.md  ARCHITECTURE.md  DISCOVERY.md  EMAIL-MANAGER-PLAN.md  EMAIL.md  REMINDER.md  SPOTIFY-TASTE-PLAN.md  SYNTHETIC-MEMORY.md
email/: config.yaml.example
email/oap_email/: api.py  classifier.py  config.py  (+6 more)
spam/: README.md  classifier.py  config.yaml  heuristics.py  imap_handler.py  spam_filter.py
spotify/: config.yaml.example  pyproject.toml
spotify/oap_spotify/: api.py  config.py  spotify_client.py
(+77 files in other folders)
